@@ -23,7 +23,10 @@ import org.apache.giraph.combiner.Combiner;
 import org.apache.giraph.edge.ByteArrayEdges;
 import org.apache.giraph.edge.VertexEdges;
 import org.apache.giraph.graph.DefaultVertexResolver;
+import org.apache.giraph.graph.DefaultVertexValueFactory;
+import org.apache.giraph.graph.Vertex;
 import org.apache.giraph.graph.VertexResolver;
+import org.apache.giraph.graph.VertexValueFactory;
 import org.apache.giraph.io.EdgeInputFormat;
 import org.apache.giraph.io.VertexInputFormat;
 import org.apache.giraph.io.VertexOutputFormat;
@@ -36,7 +39,6 @@ import org.apache.giraph.partition.Partition;
 import org.apache.giraph.partition.PartitionContext;
 import org.apache.giraph.partition.SimplePartition;
 import org.apache.giraph.utils.ReflectionUtils;
-import org.apache.giraph.graph.Vertex;
 import org.apache.giraph.worker.DefaultWorkerContext;
 import org.apache.giraph.worker.WorkerContext;
 import org.apache.hadoop.conf.Configuration;
@@ -69,6 +71,9 @@ public class GiraphClasses<I extends WritableComparable,
   protected Class<M> messageValueClass;
   /** Vertex edges class - cached for fast access */
   protected Class<? extends VertexEdges<I, E>> vertexEdgesClass;
+
+  /** Vertex value factory class - cached for fast access */
+  protected Class<? extends VertexValueFactory<V>> vertexValueFactoryClass;
 
   /** Graph partitioner factory class - cached for fast access */
   protected Class<? extends GraphPartitionerFactory<I, V, E, M>>
@@ -109,6 +114,8 @@ public class GiraphClasses<I extends WritableComparable,
     // downcast.
     vertexEdgesClass = (Class<? extends VertexEdges<I, E>>) (Object)
         ByteArrayEdges.class;
+    vertexValueFactoryClass = (Class<? extends VertexValueFactory<V>>) (Object)
+        DefaultVertexValueFactory.class;
     graphPartitionerFactoryClass =
         (Class<? extends GraphPartitionerFactory<I, V, E, M>>) (Object)
             HashPartitionerFactory.class;
@@ -149,6 +156,9 @@ public class GiraphClasses<I extends WritableComparable,
     vertexEdgesClass = (Class<? extends VertexEdges<I, E>>)
         conf.getClass(VERTEX_EDGES_CLASS, ByteArrayEdges.class,
             VertexEdges.class);
+    vertexValueFactoryClass = (Class<? extends VertexValueFactory<V>>)
+        conf.getClass(VERTEX_VALUE_FACTORY_CLASS,
+            DefaultVertexValueFactory.class);
 
     graphPartitionerFactoryClass =
         (Class<? extends GraphPartitionerFactory<I, V, E, M>>)
@@ -236,6 +246,15 @@ public class GiraphClasses<I extends WritableComparable,
    */
   public Class<? extends VertexEdges<I, E>> getVertexEdgesClass() {
     return vertexEdgesClass;
+  }
+
+  /**
+   * Get vertex value factory class
+   *
+   * @return Vertex value factory class
+   */
+  public Class<? extends VertexValueFactory<V>> getVertexValueFactoryClass() {
+    return vertexValueFactoryClass;
   }
 
   /**
@@ -496,6 +515,19 @@ public class GiraphClasses<I extends WritableComparable,
       Class<? extends VertexEdges> vertexEdgesClass) {
     this.vertexEdgesClass =
         (Class<? extends VertexEdges<I, E>>) vertexEdgesClass;
+    return this;
+  }
+
+  /**
+   * Set VertexValueFactory class held
+   *
+   * @param vertexValueFactoryClass Vertex value factory class to set
+   * @return this
+   */
+  public GiraphClasses setVertexValueFactoryClass(
+      Class<? extends VertexValueFactory> vertexValueFactoryClass) {
+    this.vertexValueFactoryClass = (Class<? extends VertexValueFactory<V>>)
+        vertexValueFactoryClass;
     return this;
   }
 
