@@ -24,7 +24,9 @@ package org.apache.giraph.conf;
 public interface GiraphConstants {
   /** Vertex class - required */
   String VERTEX_CLASS = "giraph.vertexClass";
-  /** Vertex edges class - required */
+  /** Vertex value factory class - optional */
+  String VERTEX_VALUE_FACTORY_CLASS = "giraph.vertexValueFactoryClass";
+  /** Vertex edges class - optional */
   String VERTEX_EDGES_CLASS = "giraph.vertexEdgesClass";
 
   /** Class for Master - optional */
