@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-586: Customizable default vertex value (apresta)
+
   GIRAPH-580: NPE in HiveGiraphRunner when the vertex output format is
   not defined (aching)
 
